[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superbrain-sdk"
version = "0.3.0"
...
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/anispy211/superbrainSdk"
"Bug Tracker" = "https://github.com/anispy211/superbrainSdk/issues"

[tool.setuptools]
packages = ["superbrain", "superbrain.integrations", "superbrain.lib"]

[tool.setuptools.package-data]
"superbrain.lib" = ["*.so", "*.dylib", "*.dll"]
